Fix/pagination contrast (#69)
* fix: enhances contrast between pagination items

* apply a brighter primary color for more contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,9 +25,13 @@
 }
 
 .ant-pagination-item-active {
-  @apply bg-brightPurple border-primary border-2 !important;
+  @apply bg-transparent border-brightPrimary border-2 !important;
 }
 .ant-pagination-item-active a {
+  @apply text-brightPrimary !important;
+}
+
+:is(.ant-pagination-next,.ant-pagination-prev):not([disabled]):is(:hover,:focus) svg {
   @apply text-primary !important;
 }
 
@@ -47,19 +51,28 @@
   @apply w-11 sm:w-12 !important;
 }
 
-:is(.ant-pagination-jump-next,.ant-pagination-jump-prev):is(:hover,:focus) {
-  @apply bg-white !important;
-}
 :is(.ant-pagination-jump-next,.ant-pagination-jump-prev):is(:hover,:focus) .anticon {
   @apply text-2xl relative !important;
 }
 
 .ant-pagination-item:not(.ant-pagination-item-active):is(:hover,:focus) {
-  @apply bg-white !important;
+  @apply bg-brightPurple !important;
 }
 
-:is(.ant-pagination-prev,.ant-pagination-next):not(.ant-pagination-disabled):is(:hover,:focus) {
-  @apply text-white;
+.ant-pagination-item-container {
+  top: 2px;
+  color: inherit;
+}
+
+:is(.ant-pagination-prev,.ant-pagination-next):not(.ant-pagination-disabled):is(:hover,:focus),
+.ant-pagination-item:not(.ant-pagination-item-active):is(:hover,:focus) a,
+.ant-pagination-item-container .anticon {
+  @apply text-white !important;
+}
+
+.ant-pagination-item:not(.ant-pagination-item-active) a,
+.ant-pagination-item-ellipsis {
+  @apply text-white text-opacity-60 !important;
 }
 
 .solidShadow {
